# edfo-ontop

./: README.md  docker-compose.yml  get_data.py  pyproject.toml
csv/: authors.csv  devices.csv  paper_author.csv  paper_device.csv  papers.csv
input/: ontology.obda  ontology.owl  ontology.properties  ontology.q
